--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="max-w-4xl mx-auto flex flex-col md:flex-row items-center gap-12">
                      <div class="md:w-1/3 text-center" data-aos="fade-right">
-                        <img src="1684822965165.jpg" alt="Jitesh Patil" class="rounded-full w-48 h-48 md:w-64 md:h-64 mx-auto object-cover shadow-xl border-4 border-white">
+                        <img src="https://drive.google.com/file/d/1izxYztY-KlXQRbO4SGojLQEPgWWpcsiZ/view?usp=drive_link" alt="Jitesh Patil" class="rounded-full w-48 h-48 md:w-64 md:h-64 mx-auto object-cover shadow-xl border-4 border-white">
                     </div>
                     <div class="md:w-2/3" data-aos="fade-left">
                         <p class="text-lg text-slate-600 mb-4">
